feat: add home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="homepage">
-    <div id="hello">
+    <section id="hello">
       <header class="wrapper">
         <h1>Botina</h1>
         
@@ -26,7 +26,16 @@
           <a class="nav-link" href="#">Aprenda Conosco</a>
         </nav>
       </header>
-    </div>
+
+      <main class="wrapper">
+        <h1>Se aventure com nossa trajetória...</h1>
+        <p>Embarque com nossa equipe, a Botina, nessa caminhada de introdução pelo que já fomos, pelo que somos e pelo que ainda seremos.</p>
+      </main>
+
+      <footer class="wrapper">
+        <h1>footer</h1>
+      </footer>
+    </section>
   </div>
 </body>
 </html>
