feat: finish home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
       </main>
 
       <footer class="wrapper">
-        <h1>footer</h1>
+        <div>
+          <span></span>
+          <span></span>
+        </div>
+        <div>
+          <span></span>
+          <span></span>
+        </div>
       </footer>
     </section>
   </div>
