add-back-to-top

--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="./src/assets/logos/logo2-sample.png">
   <link rel="stylesheet" href="./src/styles/global.css">
   <link rel="stylesheet" href="./src/styles/pages/home.css">
   <link rel="stylesheet" href="/src/styles/components/back-to-top.css">
   <title>Botina</title>
 </head>
+
 <body>
   <div id="homepage">
     <section id="hello">
       <header class="wrapper">
         <h1>Botina</h1>
-        
+
         <nav>
           <a class="nav-link" href="#">Início</a>
           <a class="nav-link" href="#">Quem Somos</a>
@@ -30,7 +34,8 @@
 
       <main class="wrapper">
         <h1>Se aventure com nossa trajetória...</h1>
-        <p>Embarque com nossa equipe, a Botina, nessa caminhada de introdução pelo que já fomos, pelo que somos e pelo que ainda seremos.</p>
+        <p>Embarque com nossa equipe, a Botina, nessa caminhada de introdução pelo que já fomos, pelo que somos e pelo
+          que ainda seremos.</p>
       </main>
 
       <footer class="wrapper">
@@ -43,33 +48,38 @@
           <span></span>
         </div>
       </footer>
-    </div>
+  </div>
   </section>
   <a href="#homepage" id="backToTop">
     <svg width="63" height="63" viewBox="0 0 63 63" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g filter="url(#filter0_d_1_3)">
-      <circle cx="31.5" cy="27.5" r="27.5" fill="url(#paint0_radial_1_3)"/>
-      <path d="M31.5 37.125V17.875" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M21.875 27.5L31.5 17.875L41.125 27.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <circle cx="31.5" cy="27.5" r="27.5" fill="url(#paint0_radial_1_3)" />
+        <path d="M31.5 37.125V17.875" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        <path d="M21.875 27.5L31.5 17.875L41.125 27.5" stroke="white" stroke-width="2" stroke-linecap="round"
+          stroke-linejoin="round" />
       </g>
       <defs>
-      <filter id="filter0_d_1_3" x="0" y="0" width="63" height="63" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-      <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-      <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-      <feOffset dy="4"/>
-      <feGaussianBlur stdDeviation="2"/>
-      <feComposite in2="hardAlpha" operator="out"/>
-      <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
-      <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_3"/>
-      <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_3" result="shape"/>
-      </filter>
-      <radialGradient id="paint0_radial_1_3" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(4) rotate(45) scale(77.7817)">
-      <stop stop-color="#0071E3"/>
-      <stop offset="1" stop-color="#0077ED" stop-opacity="0.85"/>
-      </radialGradient>
+        <filter id="filter0_d_1_3" x="0" y="0" width="63" height="63" filterUnits="userSpaceOnUse"
+          color-interpolation-filters="sRGB">
+          <feFlood flood-opacity="0" result="BackgroundImageFix" />
+          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+            result="hardAlpha" />
+          <feOffset dy="4" />
+          <feGaussianBlur stdDeviation="2" />
+          <feComposite in2="hardAlpha" operator="out" />
+          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_3" />
+          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_3" result="shape" />
+        </filter>
+        <radialGradient id="paint0_radial_1_3" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
+          gradientTransform="translate(4) rotate(45) scale(77.7817)">
+          <stop stop-color="#0071E3" />
+          <stop offset="1" stop-color="#0077ED" stop-opacity="0.85" />
+        </radialGradient>
       </defs>
-      </svg>
+    </svg>
   </a>
   <script src="/src/styles/components/back-to-top.js"></script>
 </body>
+
 </html>
