--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="icon" type="image/x-icon" href="./src/assets/logos/logo2-sample.png">
   <link rel="stylesheet" href="./src/styles/global.css">
   <link rel="stylesheet" href="./src/styles/pages/home.css">
-  <link rel="stylesheet" href="/src/styles/components/back-to-top.css">
   <title>Botina</title>
 </head>
 
@@ -79,7 +78,8 @@
       </defs>
     </svg>
   </a>
-  <script src="/src/styles/components/back-to-top.js"></script>
+
+  <script src="./src/scripts/backToTop.js" defer></script>
 </body>
 
 </html>
