fix: just fix a word in text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           atividade do PAC.
         </p>
         <p>
-          Até aqui, foram projetos relacionados à Arduino, à Web e até mesmo ao 
+          Até aqui, foram projetos relacionados a Arduino, à Web e até mesmo ao 
           mundo multimídia, em que tivemos que produzir um vídeo. Com isso, 
           pudemos estudar um pouco mais da aplicação de toda a Robótica no mundo
           da TI, algo que está cada vez mais presente na nossa rotina.
