feat: add crew members section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&family=Roboto:wght@400;500;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="./src/assets/logos/logo2-sample.png">
   <link rel="stylesheet" href="./src/styles/global.css">
@@ -25,7 +25,7 @@
         <nav>
           <a class="nav-link" href="#hello">Início</a>
           <a class="nav-link" href="#about">Quem Somos</a>
-          <a class="nav-link" href="#">Integrantes</a>
+          <a class="nav-link" href="#crew-members">Integrantes</a>
           <a class="nav-link" href="#">Projetos</a>
           <a class="nav-link" href="#">Aprenda Conosco</a>
           <a class="nav-link" href="javascript:void(0)" onclick="toggleResponsiveMenu()">
@@ -36,7 +36,7 @@
         <section id="responsive-menu" class="hidden">
           <a class="nav-link" href="#hello">Início</a>
           <a class="nav-link" href="#about">Quem Somos</a>
-          <a class="nav-link" href="#">Integrantes</a>
+          <a class="nav-link" href="#crew-members">Integrantes</a>
           <a class="nav-link" href="#">Projetos</a>
           <a class="nav-link" href="#">Aprenda Conosco</a>
         </section>
@@ -96,6 +96,56 @@
           é escrito, mas com certeza temos como principal objetivo mudar o mundo
           e ajudar o próximo e resolver qualquer problema por meio da tecnologia.
         </p>
+      </main>
+    </section>
+
+    <section id="crew-members">
+      <header class="wrapper">
+        <h1>Integrantes da Equipe</h1>
+      </header>
+
+      <main class="wrapper">
+        <div class="card">
+          <header>
+            <img src="https://github.com/cristianprochnow.png" alt="Cristian Prochnow">
+            <h2>Cristian Prochnow</h2>
+          </header>
+  
+          <footer>
+            <a class="nav-link" href="https://github.com/cristianprochnow">
+              <img src="./src/assets/icons/github.svg" alt="GitHub">
+              GitHub
+            </a>
+          </footer>
+        </div>
+
+        <div class="card">
+          <header>
+            <img src="https://github.com/Lucaswillians.png" alt="Lucas Willian de Souza Serpa">
+            <h2>Lucas Willian de Souza Serpa</h2>
+          </header>
+  
+          <footer>
+            <a class="nav-link" href="https://github.com/Lucaswillians">
+              <img src="./src/assets/icons/github.svg" alt="GitHub">
+              GitHub
+            </a>
+          </footer>
+        </div>
+
+        <div class="card">
+          <header>
+            <img src="https://github.com/rlksx.png" alt="Ryan Gabriel Mazzei Bromati">
+            <h2>Ryan Gabriel Mazzei Bromati</h2>
+          </header>
+  
+          <footer>
+            <a class="nav-link" href="https://github.com/rlksx">
+              <img src="./src/assets/icons/github.svg" alt="GitHub">
+              GitHub
+            </a>
+          </footer>
+        </div>
       </main>
     </section>
   </div>
