feat: add taget blank in GitHub links

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </header>
   
           <footer>
-            <a class="nav-link" href="https://github.com/cristianprochnow">
+            <a target="_blank" class="nav-link" href="https://github.com/cristianprochnow">
               <img src="./src/assets/icons/github.svg" alt="GitHub">
               GitHub
             </a>
@@ -126,7 +126,7 @@
           </header>
   
           <footer>
-            <a class="nav-link" href="https://github.com/Lucaswillians">
+            <a target="_blank" class="nav-link" href="https://github.com/Lucaswillians">
               <img src="./src/assets/icons/github.svg" alt="GitHub">
               GitHub
             </a>
@@ -140,7 +140,7 @@
           </header>
   
           <footer>
-            <a class="nav-link" href="https://github.com/rlksx">
+            <a target="_blank" class="nav-link" href="https://github.com/rlksx">
               <img src="./src/assets/icons/github.svg" alt="GitHub">
               GitHub
             </a>
