feat: add crew members section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div id="homepage">
-    <section id="hello">
+    <section id="hello" class="fill-viewport">
       <header class="wrapper">
         <h1 class="animated-title">Botina</h1>
 
@@ -26,7 +26,7 @@
           <a class="nav-link" href="#hello">Início</a>
           <a class="nav-link" href="#about">Quem Somos</a>
           <a class="nav-link" href="#crew-members">Integrantes</a>
-          <a class="nav-link" href="#">Projetos</a>
+          <a class="nav-link" href="#projects">Projetos</a>
           <a class="nav-link" href="#">Aprenda Conosco</a>
           <a class="nav-link" href="javascript:void(0)" onclick="toggleResponsiveMenu()">
             <img src="./src/assets/icons/menu.svg" alt="Menu Icon">
@@ -37,7 +37,7 @@
           <a class="nav-link" href="#hello">Início</a>
           <a class="nav-link" href="#about">Quem Somos</a>
           <a class="nav-link" href="#crew-members">Integrantes</a>
-          <a class="nav-link" href="#">Projetos</a>
+          <a class="nav-link" href="#projects">Projetos</a>
           <a class="nav-link" href="#">Aprenda Conosco</a>
         </section>
       </header>
@@ -60,14 +60,14 @@
       </footer>
     </section>
 
-    <section id="about">
+    <section id="about" class="fill-viewport">
       <header class="wrapper">
         <img src="./src/assets/logos/logo2-sample.png" alt="Logo de Botina">
         <h1 class="animated-title">Botina</h1>
       </header>
 
       <main class="wrapper">
-        <h1>Quem Somos</h1>
+        <h1 class="section-title">Quem Somos</h1>
         <p>
           Criada no início do ano letivo de 2022, a equipe Botina possui como 
           objetivo e intuito o uso da tecnologia para melhorar o mundo ao nosso
@@ -99,9 +99,9 @@
       </main>
     </section>
 
-    <section id="crew-members">
+    <section id="crew-members" class="fill-viewport">
       <header class="wrapper">
-        <h1>Integrantes da Equipe</h1>
+        <h1 class="section-title">Integrantes da Equipe</h1>
       </header>
 
       <main class="wrapper">
@@ -145,6 +145,39 @@
               GitHub
             </a>
           </footer>
+        </div>
+      </main>
+    </section>
+
+    <section id="projects" class="fill-viewport">
+      <header class="wrapper">
+        <h1 class="section-title">Projetos</h1>
+      </header>
+
+      <main class="wrapper">
+        <div>
+          <img src="./src/assets/images/projects/01.jpg" alt="Projeto de um semáforo no Tinkercad">
+          <span>
+            <strong>Semáforo</strong>
+          </span>
+        </div>
+        <div>
+          <img src="./src/assets/images/projects/02.jpg" alt="Projeto de uma luz de emergência no Tinkercad">
+          <span>
+            <strong>Luz de Emergência</strong>
+          </span>
+        </div>
+        <div>
+          <img src="./src/assets/images/projects/03.jpg" alt="Projeto de um motor rotativo no Tinkercad">
+          <span>
+            <strong>Motor Rotativo</strong>
+          </span>
+        </div>
+        <div>
+          <img src="./src/assets/images/projects/04.jpg" alt="Projeto de seguidor de linha no Tinkercad">
+          <span>
+            <strong>Seguidor de Linha</strong>
+          </span>
         </div>
       </main>
     </section>
