feat: add linking to projects boxes

--- a/index.html
+++ b/index.html
@@ -153,32 +153,38 @@
       <header class="wrapper">
         <h1 class="section-title">Projetos</h1>
       </header>
-
+      
       <main class="wrapper">
-        <div>
-          <img src="./src/assets/images/projects/01.jpg" alt="Projeto de um semáforo no Tinkercad">
-          <span>
-            <strong>Semáforo</strong>
-          </span>
-        </div>
-        <div>
-          <img src="./src/assets/images/projects/02.jpg" alt="Projeto de uma luz de emergência no Tinkercad">
-          <span>
-            <strong>Luz de Emergência</strong>
-          </span>
-        </div>
-        <div>
-          <img src="./src/assets/images/projects/03.jpg" alt="Projeto de um motor rotativo no Tinkercad">
-          <span>
-            <strong>Motor Rotativo</strong>
-          </span>
-        </div>
-        <div>
-          <img src="./src/assets/images/projects/04.jpg" alt="Projeto de seguidor de linha no Tinkercad">
-          <span>
-            <strong>Seguidor de Linha</strong>
-          </span>
-        </div>
+        <header>
+          <h1 class="section-subtitle">Arduino</h1>
+        </header>
+
+        <section>
+          <div class="image-card" onclick="goFromHomeToProject('01.html')">
+            <img src="./src/assets/images/projects/01.jpg" alt="Projeto de um semáforo no Tinkercad">
+            <span>
+              <strong>Semáforo</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToProject('02.html')">
+            <img src="./src/assets/images/projects/02.jpg" alt="Projeto de uma luz de emergência no Tinkercad">
+            <span>
+              <strong>Luz de Emergência</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToProject('04.html')">
+            <img src="./src/assets/images/projects/03.jpg" alt="Projeto de um motor rotativo no Tinkercad">
+            <span>
+              <strong>Motor Rotativo</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToProject('04.html')">
+            <img src="./src/assets/images/projects/04.jpg" alt="Projeto de seguidor de linha no Tinkercad">
+            <span>
+              <strong>Seguidor de Linha</strong>
+            </span>
+          </div>
+        </section>
       </main>
     </section>
   </div>
