feat: add more sections into content part

--- a/index.html
+++ b/index.html
@@ -155,10 +155,22 @@
       </header>
       
       <main class="wrapper">
-        <header>
-          <h1 class="section-subtitle">Arduino</h1>
-        </header>
+        <h2 class="section-subtitle">Por que Robótica na TI?</h2>
+        <iframe 
+          src="https://www.youtube.com/embed/7lZFeU9vC6I" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen>
+        </iframe>
 
+        <h2 class="section-subtitle">Máquinas Virtuais, Servidores Apache e Sistemas Operacionais</h2>
+        <a target="_blank" href="https://cristianprochnow.github.io/criando-servidor-apache-linux/" class="nav-link">
+          <img src="./src/assets/icons/book-open.svg" alt="Conteúdo">
+          Acessar Conteúdo
+        </a>
+
+        <h2 class="section-subtitle">Arduino</h2>
         <section>
           <div class="image-card" onclick="goFromHomeToProject('01.html')">
             <img src="./src/assets/images/projects/01.jpg" alt="Projeto de um semáforo no Tinkercad">
@@ -172,7 +184,7 @@
               <strong>Luz de Emergência</strong>
             </span>
           </div>
-          <div class="image-card" onclick="goFromHomeToProject('04.html')">
+          <div class="image-card" onclick="goFromHomeToProject('03.html')">
             <img src="./src/assets/images/projects/03.jpg" alt="Projeto de um motor rotativo no Tinkercad">
             <span>
               <strong>Motor Rotativo</strong>
