--- a/src/pages/projects/02.html
+++ b/src/pages/projects/02.html
@@ -10,13 +10,58 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../../assets/logos/logo2.png">
-    <link rel="stylesheet" href="../../styles/global.css">
+  <link rel="icon" type="image/x-icon" href="../../assets/logos/logo2.png">
+  <link rel="stylesheet" href="../../styles/global.css">
+  <link rel="stylesheet" href="/src/styles/pages/projects.css">
+  <link rel="stylesheet" href="/src/styles/components/wrapper.css">
   <title>Botina | Projeto 02</title>
 </head>
 
 <body>
-  
+  <header class="wrapper">
+    <a href="/index.html" class="nav-link">
+      <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
+    </a>
+  </header>
+  <section class="wrapper">
+    <header>
+      <h2>
+        Luz de Emergência
+      </h2>
+      <p>
+        O segundo projeto realizado foi uma luz de emergência utilizando um photoresistor para ligar uma led quando não
+        tivesse iluminação no ambiente.
+      </p>
+      <img class="img-projects" src="/src/assets/images/projects/02.jpg" alt="">
+      <pre>
+// Code Semáforo//
+
+
+int Led = 8;
+int Sensor = A0;              
+int Light = 0;                     
+ 
+void setup()
+{
+     pinMode(Led,OUTPUT);       
+}
+ 
+
+void loop()
+{
+  Light = analogRead(Sensor);       
+  if(Light<750)
+  {               
+    digitalWrite(Led,HIGH);
+  }
+  else
+  {                   
+    digitalWrite(Led,LOW);
+  }                 
+}
+      </pre>
+    </header>
+  </section>
 </body>
 
 </html>
