feat: add projects and learn with us section

--- a/index.html
+++ b/index.html
@@ -164,12 +164,6 @@
           allowfullscreen>
         </iframe>
 
-        <h2 class="section-subtitle">Máquinas Virtuais, Servidores Apache e Sistemas Operacionais</h2>
-        <a target="_blank" href="https://cristianprochnow.github.io/criando-servidor-apache-linux/" class="nav-link">
-          <img src="./src/assets/icons/book-open.svg" alt="Conteúdo">
-          Acessar Conteúdo
-        </a>
-
         <h2 class="section-subtitle">Arduino</h2>
         <section>
           <div class="image-card" onclick="goFromHomeToProject('01.html')">
@@ -197,6 +191,61 @@
             </span>
           </div>
         </section>
+      </main>
+    </section>
+
+    <section id="learn-with-us" class="fill-viewport">
+      <header class="wrapper">
+        <h1 class="section-title">Aprenda Conosco</h1>
+      </header>
+      
+      <main class="wrapper">
+        <h2 class="section-subtitle">Arduino</h2>
+
+        <section>
+          <div class="image-card" onclick="goFromHomeToArduino('board.html')">
+            <img src="./src/assets/images/learn-with-us/arduino/motherboard.jpg" alt="Placa de Ensaio do Arduino">
+            <span>
+              <strong>Placa de Ensaio</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToArduino('arduino.html')">
+            <img src="./src/assets/images/learn-with-us/arduino/arduino.jpg" alt="Placa de Ensaio do Arduino">
+            <span>
+              <strong>Arduino</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToArduino('leds.html')">
+            <img src="./src/assets/images/learn-with-us/arduino/leds.jpg" alt="Placa de Ensaio do Arduino">
+            <span>
+              <strong>LEDs</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToArduino('resistor.html')">
+            <img src="./src/assets/images/learn-with-us/arduino/resistor.jpg" alt="Placa de Ensaio do Arduino">
+            <span>
+              <strong>Resistor</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToArduino('rotative-engine.html')">
+            <img src="./src/assets/images/learn-with-us/arduino/rotative-engine.jpg" alt="Placa de Ensaio do Arduino">
+            <span>
+              <strong>Motor Rotativo</strong>
+            </span>
+          </div>
+          <div class="image-card" onclick="goFromHomeToArduino('bridge.html')">
+            <img src="./src/assets/images/learn-with-us/arduino/bridge.jpg" alt="Placa de Ensaio do Arduino">
+            <span>
+              <strong>Ponte L293D</strong>
+            </span>
+          </div>
+        </section>
+
+        <h2 class="section-subtitle">Máquinas Virtuais, Servidores Apache e Sistemas Operacionais</h2>
+        <a target="_blank" href="https://cristianprochnow.github.io/criando-servidor-apache-linux/" class="nav-link">
+          <img src="./src/assets/icons/book-open.svg" alt="Conteúdo">
+          Acessar Conteúdo
+        </a>
       </main>
     </section>
   </div>
