feat: add first project page

--- a/src/pages/projects/01.html
+++ b/src/pages/projects/01.html
@@ -12,7 +12,9 @@
     rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../../assets/logos/logo2.png">
     <link rel="stylesheet" href="../../styles/global.css">
-  <title>Botina | Projeto 01</title>
+    <link rel="stylesheet" href="">
+
+    <title>Botina | Projeto 01</title>
 </head>
 
 <body>
@@ -51,7 +53,8 @@
         digitalWrite(3, HIGH); //LIGA LED VERDE
         delay(1000); // ESPERA UM POUCO
         digitalWrite(3, LOW); //DESLIGA O VERDE
-        delay(1000); // ESPERA UM POUCO}
+        delay(1000); // ESPERA UM POUCO
+      }
     </pre>
 
 
