--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="#about">Quem Somos</a>
           <a class="nav-link" href="#crew-members">Integrantes</a>
           <a class="nav-link" href="#projects">Projetos</a>
-          <a class="nav-link" href="#">Aprenda Conosco</a>
+          <a class="nav-link" href="#learn-with-us">Aprenda Conosco</a>
           <a class="nav-link" href="javascript:void(0)" onclick="toggleResponsiveMenu()">
             <img src="./src/assets/icons/menu.svg" alt="Menu Icon">
           </a>
@@ -38,7 +38,7 @@
           <a class="nav-link" href="#about">Quem Somos</a>
           <a class="nav-link" href="#crew-members">Integrantes</a>
           <a class="nav-link" href="#projects">Projetos</a>
-          <a class="nav-link" href="#">Aprenda Conosco</a>
+          <a class="nav-link" href="#learn-with-us">Aprenda Conosco</a>
         </section>
       </header>
 
