--- a/src/pages/projects/02.html
+++ b/src/pages/projects/02.html
@@ -12,56 +12,56 @@
     rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="../../assets/logos/logo2.png">
   <link rel="stylesheet" href="../../styles/global.css">
-  <link rel="stylesheet" href="/src/styles/pages/projects.css">
-  <link rel="stylesheet" href="/src/styles/components/wrapper.css">
+  <link rel="stylesheet" href="../../styles/pages/projects.css">
   <title>Botina | Projeto 02</title>
 </head>
 
 <body>
-  <header class="wrapper">
-    <a href="/index.html" class="nav-link">
-      <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
-    </a>
-  </header>
-  <section class="wrapper">
-    <header>
-      <h2>
-        Luz de Emergência
-      </h2>
-      <p>
-        O segundo projeto realizado foi uma luz de emergência utilizando um photoresistor para ligar uma led quando não
-        tivesse iluminação no ambiente.
-      </p>
-      <img class="img-projects" src="/src/assets/images/projects/02.jpg" alt="">
-      <pre>
-// Code Semáforo//
-
-
-int Led = 8;
-int Sensor = A0;              
-int Light = 0;                     
- 
-void setup()
-{
-     pinMode(Led,OUTPUT);       
-}
- 
-
-void loop()
-{
-  Light = analogRead(Sensor);       
-  if(Light<750)
-  {               
-    digitalWrite(Led,HIGH);
-  }
-  else
-  {                   
-    digitalWrite(Led,LOW);
-  }                 
-}
-      </pre>
+  <div id="project-02" class="fill-viewport">
+    <header class="wrapper">
+      <a href="/index.html" class="nav-link">
+        <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
+      </a>
     </header>
-  </section>
+    <section class="wrapper">
+      <header>
+        <h2 class="section-title">
+          Luz de Emergência
+        </h2>
+        <p>
+          O segundo projeto realizado foi uma luz de emergência utilizando um photoresistor para ligar uma led quando não
+          tivesse iluminação no ambiente.
+        </p>
+        <img src="/src/assets/images/projects/02.jpg" alt="Projeto do Sensor de Emergência">
+        <pre>
+          // Code Semáforo//
+  
+  
+          int Led = 8;
+          int Sensor = A0;              
+          int Light = 0;                     
+          
+          void setup()
+          {
+              pinMode(Led,OUTPUT);       
+          }
+          
+  
+          void loop()
+          {
+            Light = analogRead(Sensor);       
+            if(Light<750)
+            {               
+              digitalWrite(Led,HIGH);
+            }
+            else
+            {                   
+              digitalWrite(Led,LOW);
+            }                 
+          }
+        </pre>
+      </header>
+    </section>
+  </div>
 </body>
-
 </html>
