feat: finish project 01 page

--- a/src/pages/projects/02.html
+++ b/src/pages/projects/02.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div id="project-02" class="fill-viewport">
+  <div id="projects" class="fill-viewport">
     <header class="wrapper">
       <a href="/index.html" class="nav-link">
         <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
