--- a/src/pages/projects/03.html
+++ b/src/pages/projects/03.html
@@ -10,13 +10,86 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../../assets/logos/logo2.png">
-    <link rel="stylesheet" href="../../styles/global.css">
-  <title>Botina | Projeto 03</title>
+  <link rel="icon" type="image/x-icon" href="../../assets/logos/logo2.png">
+  <link rel="stylesheet" href="../../styles/global.css">
+  <link rel="stylesheet" href="../../styles/pages/projects.css">
+  <title>Botina | Projeto 01</title>
 </head>
 
 <body>
-  
-</body>
+  <div id="projects" class="fill-viewport">
+    <header class="wrapper">
+      <a href="/index.html" class="nav-link">
+        <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
+      </a>
+    </header>
+    <section class="wrapper">
+      <header>
+        <h2 class="section-title">
+          Motor Rotativo
+        </h2>
+        <p>
+          Um motor que pode ir para frente e para traz foi o nosso terceiro 
+          projeto do PAC, neste projeto foi nos introduzido muitas ferramentas 
+          como o potentiometer, power supply, slideswitch e o próprio motor e 
+          drive do motor.
+        </p>
+        <img src="/src/assets/images/projects/03.jpg" alt="Projeto do Motor Rotativo">
+        <pre>
+#define PIN_ANALOGIC  A0
 
+#define PIN_MOTOR_1   4
+#define PIN_MOTOR_2   2
+#define PIN_MOTOR_AUX 3
+#define PIN_ON        8
+#define PIN_OFF       7 
+
+void setup()
+{
+  // Iniciar a leitura do Serial.
+  Serial.begin(9600);
+  
+  pinMode(PIN_MOTOR_1,   OUTPUT);
+  pinMode(PIN_MOTOR_2,   OUTPUT);
+  pinMode(PIN_MOTOR_AUX, OUTPUT);
+  pinMode(PIN_ON,        INPUT_PULLUP);
+  pinMode(PIN_OFF,       INPUT_PULLUP);
+}
+
+void loop()
+{
+  int analogicStatus = analogRead(PIN_ANALOGIC);
+  
+  Serial.print("POTENCIOMETRO = ");
+  Serial.print(analogicStatus);
+  
+  // Converter o range de leitura para o mesmo do padrão analógico.
+  // Pois o potenciômetro vai de 0 a 1023, mas a leitura apenas de 0 a 255.
+  analogicStatus = map(analogicStatus, 0, 1023, 0, 255);
+  analogWrite(PIN_MOTOR_AUX, analogicStatus);
+  
+  // Pegar o ON e OFF do switch.
+  int pinOff = digitalRead(PIN_OFF);
+  int pinOn  = digitalRead(PIN_ON);
+  
+  Serial.print(" | OFF = ");
+  Serial.print(pinOff);
+  Serial.print(" | ON = ");
+  Serial.println(pinOn);
+  
+  if (pinOff == 1 && pinOn == 0) {
+    digitalWrite(PIN_MOTOR_1, HIGH);
+    digitalWrite(PIN_MOTOR_2, LOW);
+  }
+  
+  if ((pinOff == 0 && pinOn == 1) || (pinOff == 1 && pinOn == 1)) {
+    digitalWrite(PIN_MOTOR_1, LOW);
+    digitalWrite(PIN_MOTOR_2, HIGH);
+  }
+}
+        </pre>
+      </header>
+    </section>
+  </div>
+</body>
 </html>
