feat: add arduino uno content page

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="image-card" onclick="goFromHomeToArduino('arduino.html')">
             <img src="./src/assets/images/learn-with-us/arduino/arduino.jpg" alt="Placa de Ensaio do Arduino">
             <span>
-              <strong>Arduino</strong>
+              <strong>Arduino Uno</strong>
             </span>
           </div>
           <div class="image-card" onclick="goFromHomeToArduino('leds.html')">
