--- a/src/pages/learn-with-us/board.html
+++ b/src/pages/learn-with-us/board.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/x-icon" href="../../assets/logos/logo2.png">
   <link rel="stylesheet" href="../../styles/global.css">
   <link rel="stylesheet" href="../../styles/pages/learn-with-us.css">
-  <title>Botina | Projeto 01</title>
+  <title>Botina | Placa de Ensaio</title>
 </head>
 
 <body>
