feat: add content for bridge component

--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
               <strong>Ponte L293D</strong>
             </span>
           </div>
+          <div class="image-card" onclick="goFromHomeToArduino('ldr.html')">
+            <img src="./src/assets/images/learn-with-us/arduino/ldr.jpg" alt="Sensor Fotocélula (LDR)">
+            <span>
+              <strong>Sensor Fotocélula (LDR)</strong>
+            </span>
+          </div>
         </section>
 
         <h2 class="section-subtitle">Máquinas Virtuais, Servidores Apache e Sistemas Operacionais</h2>
