feat: add quiz page

--- a/index.html
+++ b/index.html
@@ -252,6 +252,12 @@
           <img src="./src/assets/icons/book-open.svg" alt="Conteúdo">
           Acessar Conteúdo
         </a>
+
+        <h2 class="section-subtitle">Agora teste seus conhecimentos!</h2>
+        <a href="./src/pages/quiz.html" class="nav-link">
+          <img src="./src/assets/icons/zap.svg" alt="Fazer Exercícios">
+          Acessar Quiz
+        </a>
       </main>
     </section>
   </div>
@@ -263,5 +269,4 @@
   <script src="./src/scripts/pages/home.js" defer></script>
   <script src="./src/scripts/components/backToTop.js" defer></script>
 </body>
-
 </html>
