feat: add more intuitive navigation between pages

--- a/src/pages/projects/02.html
+++ b/src/pages/projects/02.html
@@ -22,10 +22,14 @@
       <a href="/index.html" class="nav-link">
         <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
       </a>
+
+      <section class="page-anchor-group">
+        <a href="/index.html#projects">Projetos</a> > <a href="./02.html#luz-emergencia">Luz de Emergência</a>
+      </section>
     </header>
     <section class="wrapper">
       <header>
-        <h2 class="section-title">
+        <h2 class="section-title" id="luz-emergencia">
           Luz de Emergência
         </h2>
         <p>
