--- a/src/pages/projects/01.html
+++ b/src/pages/projects/01.html
@@ -22,10 +22,14 @@
       <a href="/index.html" class="nav-link">
         <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
       </a>
+
+      <section class="page-anchor-group">
+        <a href="/index.html#projects">Projetos</a> > <a href="./01.html#semaforo">Semáforo</a>
+      </section>
     </header>
     <section class="wrapper">
       <header>
-        <h2 class="section-title">
+        <h2 class="section-title" id="semaforo">
           Semáforo
         </h2>
         <p>
