--- a/src/pages/projects/03.html
+++ b/src/pages/projects/03.html
@@ -22,10 +22,14 @@
       <a href="/index.html" class="nav-link">
         <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
       </a>
+
+      <section class="page-anchor-group">
+        <a href="/index.html#projects">Projetos</a> > <a href="./03.html#motor-rotativo">Motor Rotativo</a>
+      </section>
     </header>
     <section class="wrapper">
       <header>
-        <h2 class="section-title">
+        <h2 class="section-title" id="motor-rotativo">
           Motor Rotativo
         </h2>
         <p>
