--- a/src/pages/projects/04.html
+++ b/src/pages/projects/04.html
@@ -22,10 +22,14 @@
       <a href="/index.html" class="nav-link">
         <img src="/src/assets/icons/arrow-left.svg" alt="Voltar"> Voltar
       </a>
+
+      <section class="page-anchor-group">
+        <a href="/index.html#projects">Projetos</a> > <a href="./04.html#seguidor-linha">Seguidor de Linha</a>
+      </section>
     </header>
     <section class="wrapper">
       <header>
-        <h2 class="section-title">
+        <h2 class="section-title" id="seguidor-linha">
           Seguidor de Linha
         </h2>
         <p>
