feat: add route in header page from quiz

--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -21,6 +21,10 @@
       <a href="../../index.html" class="nav-link">
         <img src="../assets/icons/arrow-left.svg" alt="Voltar"> Voltar
       </a>
+
+      <section class="page-anchor-group">
+        <a href="/index.html#learn-with-us">Aprenda Conosco</a> > <a href="./01.html#semaforo">Quiz</a>
+      </section>
     </header>
 
     <main class="wrapper">
